appId: ${APP_ID}
name: "H100 | Menu | TC024 - Login Scedule Care"
tags:
  - home
  - regression
  - migrated-xcuitest
onFlowStart:
  - runScript: ../../screens/SearchAndNav/searchNavObjects.js
---
# Flow: Menu navigation and verification for find pharmacy
- runFlow: ../../subflows/Common/launchAndSetup.yaml
- runScript:
    file: ../../config/credentials-loader.js
    env:
      loginData: DEAN_FANT
      BUILD_CONFIG: ${BUILD_CONFIG}
- runFlow:
    file: ../../subflows/Account/authentication/login.yaml

- runFlow:
    file: ../../subflows/Common/dismissOverlays.yaml
- runFlow: ../../subflows/Menu/navigateViaMenu.yaml

- takeScreenshot: Menu_Pic

- assertVisible: ${output.explore_more_menu.scheduleCareBtn}
- tapOn: ${output.explore_more_menu.scheduleCareBtn}
- assertVisible: ${output.searchnav_secondary_tabs.findCareTab}


- takeScreenshot: Test_complete

