# TC008: Explore More Menu Schedule Care as Signed In User (Health100)
appId: ${APP_ID}
name: "H100 | Search and Nav | TC008 - Explore More Schedule Care Signed In"
tags:
  - searchAndNav
onFlowStart:
  - runScript: ../../screens/Account/accountObjects.js
  - runScript: ../../screens/Account/OnboardingScreen.js
  - runScript: ../../screens/Home/homescreenObjects.js
  - runScript: ../../screens/SearchAndNav/searchNavObjects.js
  - runScript: ../../screens/Health/MinuteClinicSchedulingScreen.js
  - runScript: ../../screens/Common/CommonScreen.js
  - runScript: ../../screens/Benefits/ClaimsScreen.js
  - runScript: ../../screens/SearchAndNav/searchNavObjects.js
  - runScript:
      file: ../../config/credentials-loader.js
      env:
        loginData: DEAN_FANT
        BUILD_CONFIG: ${BUILD_CONFIG}
---
- runFlow: ../../subflows/Common/launchAndSetup.yaml
- runFlow: ../../subflows/Account/authentication/login.yaml
- runFlow: ../../subflows/Common/dismissOverlays.yaml

- waitForAnimationToEnd

- runFlow:
    file: ../../subflows/SearchAndNav/openExploreMoreMenu.yaml

- assertVisible: ${output.explore_more_menu.scheduleCareLnk}
- tapOn: ${output.explore_more_menu.scheduleCareLnk}

- waitForAnimationToEnd

- assertVisible: ${output.health_scheduling.findCareLabel}
- assertVisible: ${output.health_scheduling.findTheCareYouNeed}
- tapOn: ${output.common_buttons.backBtn}

- waitForAnimationToEnd