# TC009: Explore More Menu Health Records as Signed In User (Health100)
appId: ${APP_ID}
name: "H100 | Search and Nav | TC009 - Explore More Health Records Signed In"
tags:
  - searchAndNav
onFlowStart:
  - runScript: ../../screens/Account/accountObjects.js
  - runScript: ../../screens/Account/OnboardingScreen.js
  - runScript: ../../screens/Home/homescreenObjects.js
  - runScript: ../../screens/Health/HealthScreen.js
  - runScript: ../../screens/SearchAndNav/searchNavObjects.js
  - runScript: ../../screens/Health/HealthRecordsScreen.js
  - runScript: ../../screens/Common/CommonScreen.js
  - runScript:
      file: ../../config/credentials-loader.js
      env:
        loginData: DEAN_FANT
        BUILD_CONFIG: ${BUILD_CONFIG}
---
- runFlow: ../../subflows/Common/launchAndSetup.yaml
- runFlow: ../../subflows/Account/authentication/login.yaml
- runFlow: ../../subflows/Common/dismissOverlays.yaml

- waitForAnimationToEnd

- runFlow:
    file: ../../subflows/SearchAndNav/openExploreMoreMenu.yaml

- assertVisible: ${output.menu_screen.healthRecordsLnk}
- tapOn: ${output.menu_screen.healthRecordsLnk}

- waitForAnimationToEnd
- runFlow:
    when:
      true: ${output.detectedEnv == 'qa'}
    commands:
      - assertVisible: ${output.health_records.healthRecordsTitle}
      - assertVisible: ${output.health_records.yourPersonalHealthRecords}
- runFlow:
    when:
      true: ${output.detectedEnv == 'prod'}
    commands:
      - assertVisible: ${output.common_navbars.healthNavBar}
      - assertVisible: ${output.health_health.healthyUpdatesActionsLabel}
- tapOn: ${output.common_navigation.homeTab}
- waitForAnimationToEnd
