# TC020: Disclaimers on For You Tab as Guest User (H100)
appId: ${APP_ID}
name: "H100 | Search and Nav | TC020 - Disclaimers For You Tab Guest"
tags:
    - searchAndNav
    - TLPCWHSAM-T9634
onFlowStart:
    - runScript: ../../screens/Account/accountObjects.js
    - runScript: ../../screens/Account/OnboardingScreen.js
    - runScript: ../../screens/Home/homescreenObjects.js
    - runScript: ../../screens/SearchAndNav/searchNavObjects.js
---

- runFlow: ../../subflows/Common/launchApp.yaml
- runFlow: ../../subflows/Account/onboarding/h100_continue_to_sign_options.yaml
- runFlow: ../../subflows/Account/continue_as_guest_h100.yaml
- runFlow: ../../subflows/Home/homescreen_loaded_successful.yaml

- waitForAnimationToEnd

- assertVisible: ${output.tab_btns_h100.forYouBtn}
- tapOn: ${output.tab_btns_h100.forYouBtn}

- scrollUntilVisible:
    element: ${output.disclaimers_h100.poweredByAILabel}
    direction: DOWN

- runFlow:
    file: ../../subflows/SearchAndNav/validateLearnMoreAboutAIDisclaimer.yaml